# neurals

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
indexing/: Cargo.toml
indexing/src/: main.rs
search/: Cargo.toml
search/src/: main.rs
web/: README.md  package-lock.json  package.json
web/lib/: search.js
web/pages/: index.js
web/pages/search/: index.js
