[package]
name = "indexing"
version = "0.1.0"
edition = "2021"

[[bin]]
edition = "2021"
name = "indexing"
path = "src/main.rs"

[dependencies]
qdrant-client = "1.6.0"
rust-bert = { version = "0.23.0", features = ["download-libtorch"] }
serde_json = "1.0.108"
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
env_logger = "0.11.5"
log = "0.4.22"
csv = "1.3.0"